# Maturita-2022-SSSI

./: .gitignore  README.md
Počítačové sítě/: 1.md  10.md  11.md  15.md  17.md  23.md  24.md  5.md  9.md
Počítačové-sítě_ústní-zkouška/: 12.md  13.md  14.md  16.md  18.md  19.md  2.md  20.md  21.md  22.md  25.md  3.md  4.md  6.md  7.md  8.md
Programování (maturitní práce)/: README.md  README_cs.md  build.py
Programování_maturitní-práce/: .gitignore  README.md
Programování_maturitní-práce/code/: .TODO  Cargo.toml  build.rs
Český jazyk/Ústní zkouška/: A. S. Puškin - Evžen Oněgin.md  A. S. Puškin - Piková dáma.md  A.Lustig – Modlitba pro Kateřinu Horovitzovou.md  D. Defoe - Robinson Crusoe.md  E. Hemingway - Stařec a moře.md  E. M. Remarque - Na Západní frontě klid.md  J. Otčenášek - Romeo, Julie a tma.md  J. Steinbeck - O myších a lidech.md  K. E. Kesey - Vyhoďme ho z kola ven.md  K. H. Mácha - Máj.md  L. Fuks - Spalovač mrtvol.md  N. V. Gogol - Revizor.md  R. Bradbury - 451 stupňů Fahrenheita.md  _vzor.md  vyber.py  (+3 more)
Český-jazyk_ústní-zkouška/: A. S. Puškin - Evžen Oněgin.md  A. S. Puškin - Piková dáma.md  A.Lustig – Modlitba pro Kateřinu Horovitzovou.md  D. Defoe - Robinson Crusoe.md  E. M. Remarque - Na Západní frontě klid.md  J. Otčenášek - Romeo, Julie a tma.md  J. Steinbeck - O myších a lidech.md  J. Verne - Dvacet tisíc mil pod mořem.md  K. E. Kesey - Vyhoďme ho z kola ven.md  K. H. Mácha - Máj.md  K. J. Erben - Kytice.md  Moliér - Lakomec.md  R. Bradbury - 451 stupňů Fahrenheita.md  Z. Svěrák, L. Smoljak – Dobytí severního pólu.md  __seznam.md  vyber.py
(+14 files in other folders)
