[package]
name = "gol"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib", "rlib"]

[dependencies]
anyhow = "1.0.56"
eframe = {version = "0.14.0", features = ["persistence"]}
thiserror = "1.0.30"
tracing = "0.1.29"
tracing-subscriber = "0.2.25"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
directories = "4.0.1"
gif = "0.11.3"
rand = "0.8.4"
serde = "1.0.136"
serde_json = "1.0.79"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.3", features = ["js"] }
tracing-wasm = "0.2.0"
wasm-timer = "0.2.5"